# dotfiles

./: .wezterm.lua  installer.sh  installer_cmake.sh  installer_gnuplot.sh  installer_linux.sh  installer_nvim.sh  installer_vtk.sh
.bin/: installer.sh
.cmake/: CMakeLists.txt
.nvim/: coc-settings.json  dap-config.lua  dein.toml  gnuplot.vim  init.vim  keymap.vim  myoption.vim  options.vim
.nvim/plugins/: coc.vim  markdown-preview.vim  vim-gitgutter.vim
nvim/: coc-settings.json  dein.toml  init.lua  init.vim  options.vim
nvim/lua/: dap-config.lua  dap-global.lua  dapui-global.lua  gnuplot.lua  keymap.lua  options.lua  plugins.lua
nvim/lua/plugins/: coc.lua  darcula.lua  nerdtree.lua  nvim-dap-ui.lua  vim-gitgutter.lua
nvim/lua/templates/: gnuplot.gp
nvim/plugins/: darcula.vim  mason.vim  nerdtree.vim  nvim-dap-ui.vim
textlint/: .textlintrc.json  config.yaml  install.sh
